# libcoyote

./: .gitignore  .gitmodules  libcoyote.geany
docs/: quickstart.html
jscoyote/: README.txt  jscoyote.js  package.json
pycoyote/: CMakeLists.txt  pycoyote.cpp  pycoyote.i
src/: CMakeLists.txt  asyncmsgs.cpp  asyncmsgs.h  asynctosync.cpp  asynctosync.h  cinterface.cpp  common.h  curlrequests.cpp  curlrequests.h  datastructures.cpp  datastructures.h  discovery.cpp  discovery.h  easycanvasalign.cpp  jsonproc.cpp  jsonproc.h  layouts.cpp  libcoyote.h  libcoyote.sln  libcoyote.vcxproj  msgpackproc.cpp  msgpackproc.h  mtevent.h  native_ws.cpp  native_ws.h  packages.config  resource.h  session.cpp  session.h  statuscodes.h  subscriptions.cpp  subscriptions.h
src/include/: common.h  coyotestring.h  datastructures.h  datastructures_c.h  easycanvasalign.h  layouts.h  libcoyote.h  macros.h  session.h  statuscodes.h
src/include/c/: libcoyote_c.h  session_c.h
src/include/internal/: asyncmsgs.h  asynctosync.h  common.h  curlrequests.h  jsonproc.h  msgpackproc.h  native_ws.h  subscriptions.h
